engine-net-2/examples/Errors/OperatorNotFoundCompiled.grg
#include "Rules.grg"

sequence s1
{
	{ x:int = 42 + "42" }
}
